--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -30,16 +30,14 @@
   técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; e do
   Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020. No CNCFlora atua como
   coordenador substituto e faz parte da equipe dos núcleos “Planejamento de ações para a conservação de
-  espécies ameaçadas de extinção” e "Desenvolvimento de sistemas e análises espaciais”.<br/><br/>
+  espécies ameaçadas de extinção” e "Computação cientifica e SIG”.<br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4786576P3" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> edalcin@jbrj.org</p>
 </div>
 
 <div class="item">
   <h3>Eline Martins</h3>
-  <!--
-  <h4 class="area"><strong>Coordenadora do núcleo Planos de Ação</strong></h4>
-  -->
+  <h4 class="area"><strong>Coordenadora técnico-científica</strong></h4>
   <img src="{{static_url}}/images/equipe/Eline.jpg"/>
   <p>
   Eline Martins é bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa da elaboração dos Planos de Ação Nacional. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados! 
@@ -51,6 +49,7 @@
 
 <div class="item">
   <h3>Maria Lúcia Moreira Nova da Costa</h3>
+  <h4 class="area"><strong>Coordenadora do núcleo Planejamento de Ações</strong></h4>
   <img src="{{static_url}}/images/equipe/Maria.jpg"/>
   <p>É Doutora pela Escola Nacional de Botânica
     Tropical, possui graduação em Engenharia Florestal pela Universidade de
@@ -63,28 +62,13 @@
 
 <div class="item">
   <h3>Nina Pougy</h3>
+  <h4 class="area"><strong>Coordenadora do núcleo Planejamento de Ações</strong></h4>
   <img src="{{static_url}}/images/equipe/Nina.jpg"/>
   <p>
   Nina Pougy é bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (2013). No CNCFlora coordena o núcleo “Planejamento de ações”. Também é responsável pelo geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos!
   </p> <br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> nina@cncflora.net
-    </p>
-</div>
-
-<div class="item">
-  <h3>Ricardo Avancini Fernandes</h3>
-  <h4 class="area"><strong>Coordenador de Desenvolvimento de Sistemas e SIG</strong></h4>
-  <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
-  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
-    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
-    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
-    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora coordena a equipe do
-    núcleo “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
-    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
-    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
-    <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
-    <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
     </p>
 </div>
 
@@ -143,8 +127,8 @@
   <p> Graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá
     (conclusão prevista para 2014). Possui experiência no desenvolvimento de portais e aplicações para
     internet e servidores, em análise e modelagem de sistemas e processos, utilizando tecnologias e
-    ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Desenvolvimento
-    de sistemas e análises espaciais”, onde é responsável pela criação e desenvolvimento do portal
+    ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Computação cientifica e SIG”,
+    onde é responsável pela criação e desenvolvimento do portal
     CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e
     infraestrutura de tecnologia.<br/><br/>
   <strong>Email:</strong> diogo@cncflora.net
@@ -187,7 +171,7 @@
   </p>
 </div>
 <div class="item">
-  <h3>Julio Perota:</h3>
+  <h3>Julio Perota</h3>
   <img src="{{static_url}}/images/equipe/Julio.jpeg"/>
   <p>Bacharel Marketing pela Pontifícia Universidade Católica de Campinas. Atualmente integra a
     equipe de gestão administrativa do CNCFlora, e participa de atividades relacionadas ao projeto  
@@ -291,6 +275,21 @@
     de Cerrado, Mata Atlântica e Restinga.<br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> raquel@cncflora.net
+    </p>
+</div>
+
+<div class="item">
+  <h3>Ricardo Avancini Fernandes</h3>
+  <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
+  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
+    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
+    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
+    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do
+    núcleo “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
+    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
+    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+    <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
+    <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
     </p>
 </div>
 <div class="item">
