mais padrão na equipe

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -66,7 +66,8 @@
   <img src="{{static_url}}/images/equipe/Nina.jpg"/>
   <p>
   Nina Pougy é bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (2013). No CNCFlora coordena o núcleo “Planejamento de ações”. Também é responsável pelo geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos!
-  </p> <br/><br/>
+  </p> 
+  <br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> nina@cncflora.net
     </p>
@@ -118,8 +119,9 @@
     faz pós-doutorado, sob a supervisão de Rafael Loyola, e auxilia o CNCFlora a desenvolver o
     primeiro mapa de áreas prioritárias para a conservação da flora ameaçada no Brasil. Daniele
     adora viajar, fotografia e edição de vídeos, além de praticar mergulho e stand-up paddle.<br/>
+    <strong><a href="http://lattes.cnpq.br/7089890791632018" target="_blank">Currículo lattes</a></strong><br />
     <strong>Email:</strong> da_vilanova@ufg.br<br/>
-    <a href="http://lattes.cnpq.br/7089890791632018" target="_blank">Currículo lattes</a></p>
+    </p>
 </div>
 <div class="item">
   <h3>Diogo Silva</h3>
@@ -140,8 +142,8 @@
   <p>
   Bacharel em Ciências Biológicas pela Universidade Santa Úrsula – USU (2012). Tem experiência nas áreas de botânica e ecologia nos principais biomas brasileiros e atua nos temas Biodiversidade de Ecossistemas de Montanhas e História Evolutiva de Vegetações Campestres. Integra a equipe do Núcleo Listas Vermelhas do CNCFlora, sendo responsável pela análise de dados e avaliação de risco de extinção das espécies da flora brasileira. É também responsável pela organização e a execução de expedições científicas para a coleta de material botânico em áreas prioritárias para conservação e pesquisa nas principais áreas com lacunas de informação. Encontra-se envolvido na produção de artigos científicos e notas sobre a distribuição geográfica de espécies raras/ ameaçadas da flora, além de produzir relatórios técnico-científicos, materiais para divulgação e diagnósticos sobre a situação de espécies da flora em risco de extinção.<br /><br />
   <strong>
-    <a href="http://lattes.cnpq.br/0339764153484153">lattes</a>
-  </strong>
+    <a href="http://lattes.cnpq.br/0339764153484153">Currículo lattes</a>
+  </strong><br />
   <strong>Email:</strong> efernandez@cncflora.net
   </p>
 </div>
@@ -287,7 +289,7 @@
     dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do
     núcleo “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
     sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
-    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/><br />
     <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
     </p>
