fix Maria Lucia title

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -49,7 +49,7 @@
 
 <div class="item">
   <h3>Maria Lúcia Moreira Nova da Costa</h3>
-  <h4 class="area"><strong>Coordenadora do núcleo Planejamento de Ações</strong></h4>
+  <h4 class="area"><strong>Coordenadora do núcleo conservação Ex-Situ</strong></h4>
   <img src="{{static_url}}/images/equipe/Maria.jpg"/>
   <p>É Doutora pela Escola Nacional de Botânica
     Tropical, possui graduação em Engenharia Florestal pela Universidade de
