--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -81,6 +81,8 @@
   </head>
 
   <body>
+  <div id="barra-brasil"><a href="http://brasil.gov.br" style="background:#7F7F7F; height: 20px; padding:4px 0 4px 10px; display: block; font-family:sans,sans-serif; text-decoration:none; color:white; ">Portal do Governo Brasileiro</a></div>
+  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 
 
     <!-- Header -->
