--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,9 +68,10 @@
 			<link rel="stylesheet" href="{{static_url}}/css/style.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-<!--
 	<body>
--->
+
+  <div id="barra-brasil"><a href="http://brasil.gov.br" style="background:#7F7F7F; height: 20px; padding:4px 0 4px 10px; display: block; font-family:sans,sans-serif; text-decoration:none; color:white; ">Portal do Governo Brasileiro</a></div>
+  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 
 		<!-- Header -->
 			<div id="header">
