update ricardo text

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -283,13 +283,9 @@
 <div class="item">
   <h3>Ricardo Avancini Fernandes</h3>
   <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
-  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
-    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
-    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
-    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do
-    núcleo “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
-    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
-    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/><br />
+  <p>
+ Mestrando do curso de Engenharia Cartográfica do Instituto Militar de Engenharia (IME), pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do núcleo "Computação cientifica e SIG", participando do desenvolvimento de sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação de artigos científicos e de documentos técnicos ou de divulgação científica.
+  <br /><br />
     <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
     </p>
