--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -44,13 +44,9 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
       </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
-        <p><strong>Ricardo Avancini Fernandes</strong> Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
-          em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
-          informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
-          dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do
-          núcleo "Computação cientifica e SIG", participando do desenvolvimento de
-          sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
-          de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+        <p><strong>Ricardo Avancini Fernandes</strong>
+       Mestrando do curso de Engenharia Cartográfica do Instituto Militar de Engenharia (IME), pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do núcleo "Computação cientifica e SIG", participando do desenvolvimento de sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação de artigos científicos e de documentos técnicos ou de divulgação científica.
+          <br/><br/>
           <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
           <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
         </p>
