--- a/templates/content/pt-br/listavermelha.html
+++ b/templates/content/pt-br/listavermelha.html
@@ -6,8 +6,7 @@
   espécies que já foram avaliadas, por família.</p>
 
   <p>Nela cada uma das espécies está classificada em uma das 8 categorias de risco de extinção,
-  estando também apresentados os critérios e subcritérios <a href="">[hyperlink para pdf com a tabela de
-  categorias e critérios]</a> utilizados durante a avaliação.</p>
+  estando também apresentados os <a href="http://cncflora.jbrj.gov.br/portal/static/pdf/documentos/Sumario_Categorias_IUCN.pdf">critérios e subcritérios </a> utilizados durante a avaliação.</p>
   <p>As espécies podem ser categorizadas como:</p>
   <p>
   <strong>“Criticamente em Perigo”</strong> <span class="category item-red-list CR"> CR</span><br/>
