--- a/templates/content/pt-br/document/publicacoes.html
+++ b/templates/content/pt-br/document/publicacoes.html
@@ -53,7 +53,7 @@
 -->
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/publicacao/Natureza_Conservacao.pdf"><img src="{{static_url}}/images/documentos/publicacoes/natureza_conservacao.jpg"/>
+  <a href="http://www.sciencedirect.com/science/article/pii/S1679007314000127"><img src="{{static_url}}/images/documentos/publicacoes/natureza_conservacao.jpg"/>
 <div class="portfolio-overlay"><br/>
     <p>Natureza<br/>&<br/> Conservação</p>
 </div>
