--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -1,35 +1,58 @@
 <div class="doc">
+
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-  <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Espinhaço_Meridional.pdf">
-    <img src="{{static_url}}/images/documentos/relatorio/relatorio1.jpg"/>
-<div class="portfolio-overlay">
-    <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó .</p>
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Grao_Mogol.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio4.png"/>
+        <div class="portfolio-overlay">
+          <p>Relatório de Campo Grão Mogol, Minas Gerais.</p>
+        </div>
+      </a>
+    </div>
+  </div>
 
-</div>
-</a>
-</div>
-</div>
-<div class="col-sm-3 col-md-3 col-lg-3">
-  <div class="img">
-  <a href="{{static_url}}/pdf/relatorios/Relatorio_Worksho_Treinamento.pdf">
-    <img src="{{static_url}}/images/documentos/relatorio/relatorio2.jpg"/>
-<div class="portfolio-overlay">
-    <p>Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.</p>
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Chapada_dos_Veadeiros_final.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio5.png"/>
+        <div class="portfolio-overlay">
+          <p>Relatório de Campo Chapada dos Veadeiros, Goiás.</p>
+        </div>
+      </a>
+    </div>
+  </div>
 
-</div>
-</a>
-</div>
-</div>
-<div class="col-sm-3 col-md-3 col-lg-3">
-  <div class="img">
-  <a href="{{static_url}}/pdf/relatorios/Relatorio_Expedica_Diamantina_Final.pdf">
-    <img src="{{static_url}}/images/documentos/relatorio/relatorio3.jpg"/>
-<div class="portfolio-overlay">
-    <p>Relatorio Expedicao Diamantina Final.</p>
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Espinhaco_Meridional.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio1.jpg"/>
+        <div class="portfolio-overlay">
+          <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó .</p>
+        </div>
+      </a>
+    </div>
+  </div>
 
-</div>
-</a>
-</div>
-</div>
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_Worksho_Treinamento.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio2.jpg"/>
+        <div class="portfolio-overlay">
+          <p>Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_Expedica_Diamantina_Final.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio3.jpg"/>
+        <div class="portfolio-overlay">
+          <p>Relatorio Expedicao Diamantina Final.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
 </div>
