included Marta and Susana, new facebook token

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -251,6 +251,16 @@
     </p>
 </div>
 <div class="item">
+  <h3>Marta Moraes</h3>
+  <img src="{{static_url}}/images/equipe/Marta.jpg"/>
+  <p>
+  Marta Moraes, bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (1986). Foi bolsista do Jardim Botânico do Rio de Janeiro (JBRJ) trabalhando no Herbário, participou do Programa Mata Atlântica e do Projeto Campos de Altitude, sob a coordenação de Gustavo Martinelli. Entre 1996 e 2014 coordenou o Orquidário e a coleção viva de Orquídeas do JBRJ. Montou e é responsável pela coleção em meio líquido (RBSpirit) do Herbário RB. No CNCFlora integra a equipe do núcleo Lista Vermelha executando análise e avaliação de risco de extinção das espécies. Participa também do gerenciamento do banco de imagens.
+  <br /><br />
+  <strong><a href="http://lattes.cnpq.br/7277743500411035" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> marta@cncflora.net
+    </p>
+</div>
+<div class="item">
    <h3>Nathália Machado</h3>
     <img src="{{static_url}}/images/equipe/nathalia.jpg"/>
     <p>
@@ -301,6 +311,18 @@
   socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> rodrigo@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Susana Dreveck</h3>
+  <img src="{{static_url}}/images/equipe/Susana.jpg"/>
+  <p>
+  Susana Dreveck é bióloga formada pela Universidade Regional de Blumenau (2008), com experiência em inventários florísticos e florestais do componente arbóreo e arbustivo da Mata Atlântica. Na Universidade Regional de Blumenau, trabalhou entre 2008-2010 como bióloga do Inventário Florístico Florestal de Santa Catarina (IFFSC). No CNCFlora participa de todos os processos envolvidos na avaliação do risco de extinção de espécies arbóreas endêmicas da flora do Rio de Janeiro, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Susana adora praticar esportes ao livre e se aventurar na cozinha.
+  <br /><br />
+  <strong><a href="http://lattes.cnpq.br/5090248618258897" target="_blank">Currículo lattes</a></strong><br/>
+  <!--
+  <strong>Email:</strong> marta@cncflora.net
+  -->
     </p>
 </div>
 <div class="item">
