--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -138,7 +138,7 @@
 </div>
 <div class="item">
   <h3>Eduardo Fernandez</h3>
-  <img src="{{static_url}}/images/equipe/Duda.jpeg"/>
+  <img src="{{static_url}}/images/equipe/Duda.jpg"/>
   <p>
   Bacharel em Ciências Biológicas pela Universidade Santa Úrsula – USU (2012). Tem experiência nas áreas de botânica e ecologia nos principais biomas brasileiros e atua nos temas Biodiversidade de Ecossistemas de Montanhas e História Evolutiva de Vegetações Campestres. Integra a equipe do Núcleo Listas Vermelhas do CNCFlora, sendo responsável pela análise de dados e avaliação de risco de extinção das espécies da flora brasileira. É também responsável pela organização e a execução de expedições científicas para a coleta de material botânico em áreas prioritárias para conservação e pesquisa nas principais áreas com lacunas de informação. Encontra-se envolvido na produção de artigos científicos e notas sobre a distribuição geográfica de espécies raras/ ameaçadas da flora, além de produzir relatórios técnico-científicos, materiais para divulgação e diagnósticos sobre a situação de espécies da flora em risco de extinção.<br /><br />
   <strong>
