--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -69,6 +69,43 @@
   </div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
+  <br/>
+  <h3>Guias e Modelos</h3>
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+        <a href="https://drive.google.com/a/diogok.net/file/d/0B9QSF949iQQtX08yQkdmcU9LTk0/view?pli=1">
+          <!--
+          <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
+          -->
+          <div class="portfolio-overlay">
+            <p>
+              <br />
+              Guia de<br /> 
+              Validação de Ocorrências.
+              </p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+        <a href="/portal/static/guides/Modelo planilha de inserção de ocorrência.xlsx">
+          <!--
+          <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
+          -->
+          <div class="portfolio-overlay">
+            <p><br /> Modelo de <br /> Inserção de Ocorrências</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+<div class="box-section col-sm-12 col-md-12 col-lg-12">
 <br/>
 <h3>Equipe</h3>
 <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
