Adding Laura's description and photo. Updating Daniel's and Marcio's

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -186,6 +186,25 @@
 </div>
 
 <div class="item">
+  <h3>Laura Moraes</h3>
+  <img src="{{static_url}}/images/equipe/Laura.jpg"/>
+  <p>Mestranda em Inteligencia Artificial pela COPPE, Laura também é
+  Engenheira Eletrônica e de Computacao pela UFRJ. Já trabalhou em
+  outros centros de pesquisa na área de engenharia de software,
+  desenvolvendo e dando suporte aos sistemas de gerenciamento da
+  colaboração. Possui uma start-up de TI especializada em integração e
+  análise de dados, utilizando técnicas de machine learning e data
+  mining. No CNCFlora participa do Núcleo de Sistema de Informação e
+  SIG, onde contribui para o desenvolvimento e evolução dos sistemas,
+  bancos de dados e tecnologia do Centro. Adora dançar, ler livros, ir
+  à praia e bater papo.
+  <br /><br />
+  <strong><a href="http://lattes.cnpq.br/3138892444406479" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> lmoraes@cncflora.net 
+    </p>
+</div>
+
+<div class="item">
   <h3>Leonardo Novaes</h3>
   <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
   <p> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
@@ -243,7 +262,7 @@
   distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No
   CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de
   conservação para a flora ameaçada de extinção, da redação de artigos científicos e de
-  documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e
+  documentos técnicos ou de divulgação científica. Ainda, é curador do banco de imagens e responsável pela coleta e
   determinação do material botânico durante as expedições à campo. Verdi adora coletar e
   fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.<br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
