--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -113,7 +113,7 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
       <p><strong>Daniel Maurenza</strong>
-      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia. No CNCFlora No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pelo planejamento e organização logística das expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
+      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia. No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pelo planejamento e organização logística das expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
       <br /><br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> dmaurenza@cncflora.net
@@ -144,8 +144,16 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
       <p><strong>Marcio Verdi</strong>
-      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul (2013), cujos interesses estão voltados para a avaliação da biodiversidade e modelagem de distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.
-      <Br /><br />
+      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul
+      (2013), cujos interesses estão voltados para a avaliação da
+      biodiversidade e modelagem de distribuição de espécies sobre diferentes
+      cenários climáticos, com enfoque para conservação. No CNCFlora participa
+      de todos os processos envolvidos na elaboração de estratégias de
+      conservação para a flora ameaçada de extinção, da redação de artigos
+      científicos e de documentos técnicos ou de divulgação científica. Ainda,
+      é curador do banco de imagens e responsável pela coleta e determinação do material botânico durante as
+      expedições à campo. Verdi adora coletar e fotografar plantas, tomar
+      chimarrão e apreciar cervejas artesanais. <Br /><br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> verdi@cncflora.net
       </p>
