--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -31,6 +31,23 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
           </p>
       </div>
       <div class="item">
+          <img src="{{static_url}}/images/equipe/Laura.jpg"/>
+          <p><strong>Laura Moraes</strong>
+          Mestranda em Inteligencia Artificial pela COPPE, Laura também é
+          Engenheira Eletrônica e de Computacao pela UFRJ. Já trabalhou em
+          outros centros de pesquisa na área de engenharia de software,
+          desenvolvendo e dando suporte aos sistemas de gerenciamento da
+          colaboração. Possui uma start-up de TI especializada em integração e
+          análise de dados, utilizando técnicas de machine learning e data
+          mining. No CNCFlora participa do Núcleo de Sistema de Informação e
+          SIG, onde contribui para o desenvolvimento e evolução dos sistemas,
+          bancos de dados e tecnologia do Centro. Adora dançar, ler livros, ir
+          à praia e bater papo. <br/><br/>
+          <strong><a href="http://lattes.cnpq.br/3138892444406479" target="_blank">Currículo lattes</a></strong><br/>
+          <strong>Email:</strong> lmoraes@cncflora.net
+        </p>
+      </div>
+      <div class="item">
         <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
         <p><strong>Leonardo Novaes</strong> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
           de Janeiro - PUC (2011). Possui experiência na área de sensoriamento remoto e sistemas de
