Added picture for PAN Espinhaço Meridional and new product Guia de Campo do Cerrado

--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -54,12 +54,27 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
+        <div class="img">
         <a href=""  data-toggle="modal" data-target="#breve-three">
+            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Em Breve<br/><br/>
               Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href=""  data-toggle="modal" data-target="#breve-four">
+            <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+             Flora ameaçada do Cerrado Mineiro
             </p>
 
           </div>
