--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -29,24 +29,13 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href="" data-toggle="modal" data-target="#breve-one" >
+        <div class="img">
+            <a href=""  data-toggle="modal" data-target="#breve-one">
+            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Em Breve<br/><br/>
-              Protocolo de Campo. Diretrizes para coleta de dados</p>
-
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href=""  data-toggle="modal" data-target="#breve-two">
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Em Breve<br/><br/>
-              Manual Operacional Planejamento de Açoes para Conservação da Flora Ameaçada de Extinção
+              Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional
             </p>
 
           </div>
@@ -55,12 +44,25 @@
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-        <a href=""  data-toggle="modal" data-target="#breve-three">
-            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
+            <a href=""  data-toggle="modal" data-target="#breve-two">
+            <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Em Breve<br/><br/>
-              Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional
+            Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img breve">
+        <a href=""  data-toggle="modal" data-target="#breve-three">
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+            Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Bacia do Alto Tocantins
             </p>
 
           </div>
@@ -75,6 +77,31 @@
             <br/>
             <p>Em Breve<br/><br/>
              Flora ameaçada do Cerrado Mineiro
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+          <a href="" data-toggle="modal" data-target="#breve-five" >
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+              Protocolo de Campo. Diretrizes para coleta de dados</p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+          <a href=""  data-toggle="modal" data-target="#breve-six">
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+              Manual Operacional Planejamento de Açoes para Conservação da Flora Ameaçada de Extinção
             </p>
 
           </div>
