Bug-fix: pop-up when clicking on a publication

--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -221,7 +221,7 @@
         <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
       </div>
       <div class="modal-body">
-        Protocolo de Campo. Diretrizes para coleta de dados.
+        Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional.
       </div>
     </div>
   </div>
@@ -235,7 +235,7 @@
         <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
       </div>
       <div class="modal-body">
-        Manual Operacional Planejamento de Açoes para Conservação da Flora Ameaçada de Extinção
+        Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá.
       </div>
     </div>
   </div>
@@ -250,7 +250,7 @@
         <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
       </div>
       <div class="modal-body">
-        Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional
+        Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Bacia do Alto Tocantins.
       </div>
     </div>
   </div>
@@ -265,7 +265,37 @@
         <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
       </div>
       <div class="modal-body">
-        PAN Faveiro de Wilson
+        Flora ameaçada do Cerrado Mineiro
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="breve-five" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Protocolo de Campo. Diretrizes para coleta de dados.
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="breve-six" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Manual Operacional Planejamento de Açoes para Conservação da Flora Ameaçada de Extinção.
         </div>
     </div>
   </div>
