up the limit of the redlist list

--- a/templates/redlist.html
+++ b/templates/redlist.html
@@ -48,11 +48,13 @@
 <script src="{{static_url}}/js/list.js"></script>
 <script>
 var options = {
+  page: 9999,
   valueNames: ['name']
 };
 var famillyList = new List('familly', options);
 
 var optionsspecie = {
+  page: 9999,
   valueNames: ['name']
 };
 var specieList = new List('species', optionsspecie);
