--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -192,14 +192,47 @@
           </div>
         </section>
 
-        <ul class="links parceiros col-sm-6 col-md-6 col-lg-6">
-          <li><a href="#"><img class="img-1" src="{{static_url}}/images/PROBIO.jpg" /></a></li>
-          <li><a href="#"><img class="img-2" src="{{static_url}}/images/MMA.png" /></a></li>
-          <li><a href="#"><img class="img-3" src="{{static_url}}/images/IUCN.gif" /></a></li>
-
-        </ul>
+        <div class='logos 6u parceiros link parceiros col-sm-6 col-md-6 col-lg-6'>
+          <p>Colaboradores:</p>
+          <ul>
+            <li>
+              <a href="http://iucn.org">
+                <img class="img-1" src="{{static_url}}/images/logos/iucn.jpg" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-1" src="{{static_url}}/images/logos/biogeo.jpg" />
+              </a>
+            </li>
+          </ul>
+          <p>Apoio:</p>
+          <ul>
+            <li>
+              <a href="#">
+                <img class="img-1" src="{{static_url}}/images/logos/gef.jpg" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-1" src="{{static_url}}/images/logos/sea.jpg" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-1" src="{{static_url}}/images/logos/funbio.jpg" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-1" src="{{static_url}}/images/logos/v5.jpg" />
+              </a>
+            </li>
+          </ul>
+        </div>
 
         <div class="6u endereco">
+          <img src="{{static_url}}/images/logos/jbrj.jpg" alt="" class="img-1" />
           <p>Instituto de Pesquisas Jardim Botânico do Rio de Janeiro<br/>
             Rua Pacheco Leão, 915 - Dipeq<br/>
             Jardim Botânico - Rio de Janeiro - RJ<br/>
